--- a/JavaApplicationMiniProject/.classpath
+++ b/JavaApplicationMiniProject/.classpath
@@ -7,5 +7,7 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="C:/Users/user/Downloads/JTattoo-1.6.13.jar"/>
+	<classpathentry kind="lib" path="C:/oracleDev/ojdbc8.jar"/>
+	<classpathentry kind="lib" path="C:/javaDev/lombok-1.18.36.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
